--- a/cfp.html
+++ b/cfp.html
@@ -17,7 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 
 <center>
-<img src="images/header_online.jpg" alt="Logo" height="276px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -48,7 +48,7 @@ Prospective participants in the workshop are required to submit a contribution a
     - Full paper (max 6 pages)</br></br>
 
 where both pages limit include references. Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a> (also available <a href="https://www.overleaf.com/latex/templates/ieee-conference-template/grfzhhncsfqn" target="_blank">on Overleaf</a>), and they will follow a single blind review process.
-<br><br>Send your PDF manuscript through EasyChair: <a href="https://easychair.org/conferences/?conf=harlworkshop2021">here</a></br></br> 
+<br><br>Send your PDF manuscript through EasyChair: (to be announced)</br></br> 
 
 
 Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
@@ -56,15 +56,16 @@ We particularly encourage authors to share their in-progress works in the form o
 
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline:  <del>July 02, 2021</del> <b style="color:red">July 14, 2021</b> (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>, <b style="color:red">extended deadline</b>)</br>
-    Notification of acceptance: July 30, 2021</br>
-    Camera-ready version: August 12, 2021 (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>)</br>
-    Workshop: August 27, 2021 </br></br>
+    Paper and extended abstract submission deadline:  TBA</br>
+    Notification of acceptance: TBA</br>
+    Camera-ready version: TBA</br>
+    Workshop: TBA </br></br>
 
 </br>
 <strong>Journal Special Issue:</strong></br></br>
 
-Contributors to the workshop will be invited to submit extended versions of the manuscripts to a topical collection (special issue) at <a href="https://www.springer.com/journal/521/updates/19055662" target="_blank">Neural Computing and Applications</a>.
+Contributors to the workshop will be invited to submit extended versions
+of the manuscripts to a <b>special issue</b> whose Call for Papers will be appropriately disseminated here.<br/>
 </br>Submissions will be peer reviewed consistent with the journal practices.
 </br></br>
 
@@ -83,10 +84,12 @@ Contributors to the workshop will be invited to submit extended versions of the 
 <p>
 <div style="margin: auto;">
 	
-	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.unsw.edu.au"><img src="images/unsw.png" alt="University of New South Wales Sydney" height="100px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ualberta.ca/index.html"><img src="images/ualberta.png" alt="University of Alberta" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
