--- a/program.html
+++ b/program.html
@@ -43,7 +43,7 @@ tr:nth-child(even) {
 <body id="top">
 
 <center>
-<img src="images/header_online.jpg" alt="Logo" height="276px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -70,134 +70,79 @@ tr:nth-child(even) {
 		<div id="content" style="width:95%; text-align:center; margin:10px">
 
 <div class="container" style="font-size:18px;">
+This is a tentative program prone to modifications upon comments after review process.<br><br>
 <table>
   <tr>
-    <th><a href="https://www.timeanddate.com/time/zones/aest" target="_blank">AEST time</a></th>
-    <th>Speaker</th>
-    <th>Topic</th>
+    <th><a href="https://www.timeanddate.com/worldclock/japan/yokohama" target="_blank">Yokohama timezone</a></th>
+    <th>Activity</th>
   </tr>
   <tr>
-    <td>18:30</td>
-    <td colspan="2"><b>Welcome and introduction</b></td>
+    <td><b>08:15-08:30</b></td>
+    <td>Welcome and introduction</td>
   </tr>
   <tr>
-    <td rowspan="3">18:35</td>
-    <td rowspan="3" colspan="2"><b>Contribution talks - Session 1</b><br>
-<ul>
-<li><a href="submission_3.pdf" target="_blank">Should I Trust You? Incorporating Unreliable Expert Advice in Human-Agent Interaction</a><br><i>Tamlin Love, Ritesh Ajoodha and Benjamin Rosman</i>
-</li>
-<li><a href="submission_8.pdf" target="_blank">Mixing Human Demonstrations with Self-Exploration in Experience Replay for Deep Reinforcement Learning</a><br><i>Akansel Cosgun and Dylan Klein</i>
-</li></ul></td>
-</tr><tr></tr><tr></tr>
-
-  <tr>
-    <td>19:00</td>
-    <td><a class="a_link" href="speakers.html#pvamplew">Peter Vamplew</a></td>
-    <td>Multiobjective Approaches to Human-Aligned Reinforcement Learning</td>
+    <td><b>08:30-09:15</b></td>
+    <td>Invited Talk #1</td>
   </tr>
 
   <tr>
-    <td>19:30</td>
-    <td><a href="speakers.html#cweber">Cornelius Weber</a></td>
-    <td>Hybrid Neural Learning for Interactive Robots</td>
+    <td><b>09:15-10:00</b></td>
+    <td>Invited Talk #2</td>
   </tr>
 
   <tr>
-    <td>20:00</td>
-    <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
-    <td>Modelling Imprecise Human Collaborators</td>
+    <td><b>10:00-10:30</b></td>
+    <td>Coffee break and poster session</td>
   </tr>
 
   <tr>
-    <td>20:30</td>
-    <td><a href="speakers.html#jkober">Jens Kober</a></td>
-    <td>Reinforcement Learning with Interactive Corrections</td>
+    <td><b>10:30-11:15</b></td>
+    <td>Contribution Talks #1</td>
   </tr>
 
   <tr>
-    <td>21:00</td>
-    <td colspan="2"><b>Break</b></td>
+    <td><b>11:15-12:00</b></td>
+    <td>Invited Talk #3</td>
   </tr>
 
   <tr>
-    <td rowspan="3">21:15</td>
-    <td colspan="2" rowspan="3"><b>Contribution talks - Session 2</b>
-<ul>
-<li><a href="submission_6.pdf" target="_blank">Explanations In, Explanations Out: Human-in-the-Loop Social Navigation Learning</a><br><i>Jakob Karalus, Amar Halilovic and Felix Lindner</i>
-</li>
-<li><a href="submission_7.pdf" target="_blank">Learning Proxemic Behavior Using Reinforcement Learning with Cognitive Agents</a><br><i>Cristian Camilo Millán Arias, Bruno Fernandes and Francisco Cruz</i>
-</li>
-</ul>
-</td>
-  </tr><tr></tr><tr></tr>
-
-  <tr>
-    <td>21:30</td>
-    <td><a class="a_link" href="speakers.html#rdazeley">Richard Dazeley</a></td>
-    <td>Broad-XAI: Human-aligned conversational explanations</td>
+    <td><b>12:00-13:30</b></td>
+    <td>Lunch Break</td>
   </tr>
 
   <tr>
-    <td>22:00</td>
-    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
-    <td>More Humane Learning</td>
+    <td><b>13:30-14:15</b></td>
+    <td>Invited Talk #4</td>
   </tr>
 
   <tr>
-    <td>22:30</td>
-    <td><a class="a_link" href="speakers.html#bfernandes">Bruno Fernandes</a></td>
-    <td>Reinforcement Learning for Robot Control and Interaction</td>
+    <td><b>14:15-15:00</b></td>
+    <td>Invited Talk #5</td>
   </tr>
 
   <tr>
-    <td>23:00</td>
-    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
-    <td>Agents learning from humans -- what the heck do you want me to do?</td>
+    <td><b>15:00-15:30</b></td>
+    <td>Coffee break and poster session</td>
   </tr>
 
   <tr>
-    <td>23:30</td>
-    <td colspan="2"><b>Break</b></td>
+    <td><b>15:30-16:15</b></td>
+    <td>Contribution Talks #2</td>
   </tr>
 
   <tr>
-    <td rowspan="3">23:45</td>
-    <td colspan="2" rowspan="3"><b>Contribution talks - Session 3</b>
-<ul>
-<li><a href="submission_5.pdf" target="_blank">Policy Regularization for Legible Behavior</a><br><i>Michele Persiani</i>
-</li>
-<li><a href="submission_9.pdf" target="_blank">Explainable Deep Reinforcement Learning Using Introspection in a Non-episodic Task</a><br><i>Angel Ayala, Francisco Cruz, Bruno Fernandes and Richard Dazeley</i>
-</li>
-</ul></td>
-  </tr><tr></tr><tr></tr>
-
-  <tr>
-    <td>00:00 (28th Aug)</td>
-    <td><a class="a_link" href="speakers.html#gkonidaris">George Konidaris</a></td>
-    <td>Grounded Symbolic Representations for Human-Robot Communication</td>
+    <td><b>16:15-17:00</b></td>
+    <td>Invited Talk #6</td>
   </tr>
 
   <tr>
-    <td>00:30 (28th Aug)</td>
-    <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
-    <td>Reward (Mis)design for Autonomous Driving</td>
+    <td><b>17:00-18:00</td>
+    <td>Panel Discussion</td>
   </tr>
 
   <tr>
-    <td>01:00 (28th Aug)</td>
-    <td><a class="a_link" href="speakers.html#ppilarski">Patrick Pilarski</a></td>
-    <td>Constructivism in Tightly Coupled Human Machine Interfaces</td>
-  </tr>
-
-  <tr>
-    <td>01:30 (28th Aug)</td>
-    <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
-    <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
-  </tr>
-
-  <tr>
-    <td>02:00 (28th Aug)</td>
-    <td colspan="2"><b>Farewell and conclusions</b></td>
+    <td><b>18:00-18:15</b></td>
+    <td>Farewell and conclusions</td>
   </tr>
 
 </table>
@@ -212,14 +157,16 @@ tr:nth-child(even) {
 <div class="wrapper row4">
   <div class="rnd">
     <div id="footer" class="clear">
-      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - In conjunction with <a target="blank" href="https://icdl-2021.org">IEEE ICDL 2021</a>
+      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - Proposal under review
 <p>
 <div style="margin: auto;">
 	
-	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.unsw.edu.au"><img src="images/unsw.png" alt="University of New South Wales Sydney" height="100px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ualberta.ca/index.html"><img src="images/ualberta.png" alt="University of Alberta" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
