--- a/speakers.html
+++ b/speakers.html
@@ -17,7 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 
 <center>
-<img src="images/header_online.jpg" alt="Logo" height="276px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -46,135 +46,57 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <div class="container" style="font-size:18px;">
 
-	<div id="pvamplew" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/pvamplew.jpg" alt="Peter Vamplew" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="gchalvatzaki" style="border-top: solid 1px #323232; min-height: 260px;">
+		<img src="images/display/gchalvatzaki.jpg" alt="Georgia Chalvatzaki" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences/staff-profiles/information-technology/peter-vamplew" target="_blank">Peter Vamplew</a></br>
-			<a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences" target="_blank">School of Engineering, Information Technology and Physical Sciences</a></br><a href="https://federation.edu.au/" target="_blank">Federation University</a></br></br>
+			<strong><a href="https://www.ias.informatik.tu-darmstadt.de/Team/GeorgiaChalvatzaki" target="_blank">Georgia Chalvatzaki</a></br>
+			<a href="https://irosalab.com/" target="_blank">Interactive Robot Perception and Learning Lab</a></br><a href="https://www.tu-darmstadt.de/" target="_blank">TU Darmstadt</a></br></br>
 			</strong></br>
-			<b>Multiobjective Approaches to Human-Aligned Reinforcement Learning</b></br>11.00 CEST</br>
+			<b>To be announced</b>
                         </br> 
 		</p>
 	</div>
 
-	<div id="cweber" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/cweber.jpg" alt="Cornelius Weber" height="200px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="slevine" style="border-top: solid 1px #323232; min-height: 260px;">
+		<img src="images/display/slevine.png" alt="Sergey Levine" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/weber.html" target="_blank">Cornelius Weber</a></br>
-			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
+			<strong><a href="https://people.eecs.berkeley.edu/~svlevine/" target="_blank">Sergey Levine</a></br>
+			<a href="https://eecs.berkeley.edu/" target="_blank">Dept. of Electrical Engineering and Computer Sciences</a></br><a href="https://www.berkeley.edu/" target="_blank">UC Berkeley</a></br></br>
 			</strong></br>
-			<b>Hybrid Neural Learning for Interactive Robots</b></br>11.30 CEST</br>
+			<b>Offline Reinforcement Learning for Human-Interactive Agents</b>
                         </br> 
 		</p>
 	</div>
 
-	<div id="brosman" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/brosman.jpg" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="dsadigh" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/dsadigh.jpg" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
-			<a href="https://www.wits.ac.za/csam/" target="_blank">School of Computer Science and Applied Mathematics</a><br/><a href="https://www.wits.ac.za/" target="_blank">University of the Witwatersrand</a></br></br>
+			<strong><a href="https://profiles.stanford.edu/dorsa-sadigh" target="_blank">Dorsa Sadigh</a></br>
+			<a href="https://hai.stanford.edu/" target="_blank">Institute for Human-Centered Artificial Intelligence</a><br/><a href="https://www.stanford.edu/" target="_blank">Stanford University</a></br></br>
 			</strong></br>
-			<b>Modelling Imprecise Human Collaborators</b></br>12.00 CEST</br>
+			<b>Aligning Robots with Human Preferences</b>
                         </br> 
 		</p>
 	</div>
 
-	<div id="jkober" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/jkober.jpg" alt="Jens Kober" height="200px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="pbarros" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/pbarros.PNG" alt="Jens Kober" height="200px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="http://www.jenskober.de/" target="_blank">Jens Kober</a></br>
-			<a href="https://www.tudelft.nl/en/3me/about/departments/cognitive-robotics-cor/" target="_blank">Cognitive Robotics Dept</a><br/><a href="https://www.tudelft.nl/" target="_blank">Delft University of Technology</a></br></br>
+			<strong><a href="https://scholar.google.com/citations?user=LU9tpkMAAAAJ&hl=en" target="_blank">Pablo Barros</a></br>
+			<a href="https://www.sony.com/en/SonyInfo/research/about/brussels-laboratory/" target="_blank">Brussels Laboratory</a><br/><a href="https://www.sony.com/" target="_blank">Sony Corporation</a></br></br>
 			</strong></br>
-			<b>Reinforcement Learning with Interactive Corrections</b></br>12.30 CEST</br>
+			<b>The Emergence of Social Characteristics on Competitive Agents Modulated by Learning Strategies</b>
                         </br> 
 		</p>
 	</div>
 
-	<div id="rdazeley" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/rdazeley.jpg" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="mgombolay" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/mgombolay.jpg" alt="Matthew Gombolay" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</a></br>
-			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a><br/><a href="https://www.deakin.edu.au/" target="_blank">Deakin University</a></br></br>
+			<strong><a href="https://core-robotics.gatech.edu/people/matthew-gombolay/" target="_blank">Matthew Gombolay</a></br>
+			<a href="https://core-robotics.gatech.edu/" target="_blank">Cognitive Optimization and Relational Robotics Lab</a><br/><a href="https://www.gatech.edu/" target="_blank">Georgia Institute of Technology</a></br></br>
 			</strong></br>
-			<b>Broad-XAI: Human-aligned conversational explanations</b></br>13.30 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="asciutti" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/asciutti.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://www.iit.it/people/alessandra-sciutti" target="_blank">Alessandra Sciutti</a></br>
-			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies unit</a></br><a href="https://www.iit.it/" target="_blank">Istituto Italiano di Tecnologia</a></br></br>
-			</strong></br>
-			<b>More Humane Learning</b></br>14.00 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="bfernandes" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/bfernandes.jpg" alt="Bruno Fernandes" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://sites.google.com/ecomp.poli.br/bjtf" target="_blank">Bruno Fernandes</a></br>
-			<a href="http://www.ecomp.poli.br/" target="_blank">Computer Engineering Dept</a><br/><a href="https://www.ufpe.br/" target="_blank">University of Pernambuco</a></br></br>
-			</strong></br>
-			<b>Reinforcement Learning for Robot Control and Interaction</b></br>14.30 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="mtaylor" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/mtaylor.jpg" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
-			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br></br>
-			</strong></br>
-			<b>Agents learning from humans -- what the heck do you want me to do?</b></br>15.00 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="gkonidaris" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/gkonidaris.jpg" alt="George Konidaris" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="http://cs.brown.edu/people/gdk/" target="_blank">George Konidaris</a></br>
-			<a href="http://irl.cs.brown.edu/" target="_blank">Intelligent Robot Lab</a><br/><a href="https://www.brown.edu/" target="_blank">Brown University</a></br></br>
-			</strong></br>
-			<b>Grounded Symbolic Representations for Human-Robot Communication</b></br>16.00 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="wbknox" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/wbknox.jpg" alt="W. Bradley Knox" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://www.bradknox.net/" target="_blank">W. Bradley Knox</a></br>
-			<a href="https://www.bosch.us" target="_blank">Robert Bosch LLC, Austin, Texas</a></br></br>
-			</strong></br>
-			<b>Reward (Mis)design for Autonomous Driving</b></br>16.30 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="ppilarski" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/ppilarski.jpg" alt="Patrick Pilarski" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://sites.ualberta.ca/~pilarski/" target="_blank">Patrick Pilarski</a></br>
-			<a href="https://blinclab.ca" target="_blank">Bionic Limbs for Improved Natural Control Laboratory</a><br/><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br>
-			<a href="https://deepmind.com/" target="_blank"> DeepMind, Edmonton, Alberta</a><br/></br></br>
-			</strong></br>
-			<b>Constructivism in Tightly Coupled Human Machine Interfaces</b></br>17.00 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="fleno" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/fleno.png" alt="Felipe Leno da Silva" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://f-leno.github.io/" target="_blank">Felipe Leno da Silva</a></br>
-			<a href="https://st.llnl.gov/research" target="_blank">Lawrence Livermore National Lab</a></br></br>
-			</strong></br>
-			<b>Action Advising for Accelerating Multiagent Reinforcement Learning</b></br>17.30 CEST</br>
+			<b>Interpretable and Interactive Reinforcement Learning in Human-Robot Teaming</b>
                         </br> 
 		</p>
 	</div>
@@ -190,14 +112,16 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper row4">
   <div class="rnd">
     <div id="footer" class="clear">
-      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - In conjunction with <a target="blank" href="https://icdl-2021.org">IEEE ICDL 2021</a>
+      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - Proposal under review
 <p>
 <div style="margin: auto;">
 	
-	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.unsw.edu.au"><img src="images/unsw.png" alt="University of New South Wales Sydney" height="100px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ualberta.ca/index.html"><img src="images/ualberta.png" alt="University of Alberta" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
