--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="container " class="clear text-center">
       <!-- ####################################################################################################### -->
 		<div id="content" style="width:95%; text-align:center; font-size:18px; margin:10px">
-			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br></br>
+			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br>
+			Endorsed by <a href="https://www.ieee-ras.org/cognitive-robotics" target="_blank">TC-CoRo</a> and <a href="https://www.ieee-ras.org/machine-learning-for-automation" target="_blank">TC-MCfA</a></br>
+			May 13th or May 17th, 2024 - Yokohama, Japan <br/>
+			Proposal under review at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a>
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
 
