--- a/cfp.html
+++ b/cfp.html
@@ -83,7 +83,7 @@ of the manuscripts to a <b>special issue</b> whose Call for Papers will be appro
 <div class="wrapper row4">
   <div class="rnd">
     <div id="footer" class="clear">
-      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - In conjunction with <a target="blank" href="https://icdl-2021.org">IEEE ICDL 2021</a>
+      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - Proposal under review
 <p>
 <div style="margin: auto;">
 	
