--- a/program.html
+++ b/program.html
@@ -152,14 +152,14 @@ This is a tentative program prone to modifications upon comments after review pr
 <div class="wrapper row4">
   <div class="rnd">
     <div id="footer" class="clear">
-      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - Proposal under review
+      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots
 <p>
 <div style="margin: auto;">
 	
 	<a target="blank" href="https://www.unsw.edu.au"><img src="images/unsw.png" alt="University of New South Wales Sydney" height="100px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.ualberta.ca/index.html"><img src="images/ualberta.png" alt="University of Alberta" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a></br>
+	<a target="blank" href="https://umdearborn.edu/"><img src="images/michigan-dearborn.png" alt="University of Michigan at Dearborn" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
