--- a/cfp.html
+++ b/cfp.html
@@ -68,7 +68,7 @@ Prospective participants in the workshop are required to submit a contribution a
     - Full paper (max 6 pages)</br></br>
 
 where both pages limit include references. Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a> (also available <a href="https://www.overleaf.com/latex/templates/ieee-conference-template/grfzhhncsfqn" target="_blank">on Overleaf</a>), and they will follow a single blind review process.
-<br><br>Send your PDF manuscript through EasyChair: (to be announced)</br></br> 
+<br><br>Send your PDF manuscript through EasyChair: <a href="https://easychair.org/my/conference?conf=harl2024" target="_blank">here</a>.</br></br> 
 
 
 Selected contributions will be presented during the workshop either as oral presentations or in poster sessions. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
