--- a/cfp.html
+++ b/cfp.html
@@ -79,7 +79,7 @@ Submissions will be peer reviewed consistent with the journal practices.
 
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline: February 26, 2024. </br>
+    Paper and extended abstract submission deadline:   <del>February 26, 2024</del> <b style="color:red">March 04, 2024</b> (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>, <b style="color:red">extended deadline</b>)</br>
     Notification of acceptance: April 5, 2024. </br>
     Camera-ready version: April 29, 2024. </br>
     Workshop: May 17, 2024. </br></br>
