--- a/speakers.html
+++ b/speakers.html
@@ -13,6 +13,26 @@ Licence URI: http://www.os-templates.com/template-terms
 <link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
 
 <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+<style>
+table {
+  font-family: arial, sans-serif;
+  font-size: 16px;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  font-size: 16px;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+</style>
 </head>
 <body id="top">
 
